[project]
name = "tempo"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "Jinja2>=3.1.6",
    "click>=8.3.1",
    "fastapi>=0.128.0",
    "fastapi-cli>=0.0.20",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-extra-types>=2.11.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "PyYAML>=6.0.3",
    "rich>=14.3.1",
    "SQLAlchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
    "urllib3>=2.6.3",
    "uvloop>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "ipython>=9.10.0",
    "sentry-sdk>=2.51.0",
]

[project.scripts]
tempo-bin = "tempo.cli.commands:execute_command"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tempo", "addons"]
